# refills_second_review

./: CMakeLists.txt  README.md  package.xml  setup.py
data/donbot_bremen/: 19_shelves.json  19_shelves.owl  19_shelves.yaml  19_shelves_pp.owl  19_shelves_pp_pp.owl  19_shelves_who_work.json  19_shelves_who_work.yaml  1_shelf.json  real.pickle  really_weird.pickle  rooming_in_detections_2019-02-20_13-50-40.pickle  tab_262.pickle
data/donbot_karlsruhe/: backroom.pickle  backroom.yaml  backroom_pp.owl  partial01.owl  partial01.pickle  partial01.yaml  partial01_pp.owl  partial01_pp_pp.owl  partial02.pickle  partial03.pickle
data/kmr_iiwa_bremen/: 19_only.yaml  19_shelves_who_work.yaml  5_shelves.yaml
launch/: bringup_donbot.launch  bringup_donbot_markos_fingers.launch  bringup_everything.launch  bringup_everything_except_knowrob.launch  bringup_everything_except_robosherlock.launch  bringup_everything_karlsruhe_backroom.launch  bringup_everything_markos_fingers.launch  bringup_everything_refill.launch  diagnostics.launch  donbot_low_level.launch  giskardpy_donbot.launch  post_process_rooming_in.launch  process_rooming_in_pickle.launch  rooming_in.launch  rooming_in_karlsruhe.launch  show_map.launch  show_map_karlsruhe.launch  sim_devel.launch  sim_devel_kmr_iiwa.launch  sim_devel_scenario3.launch
nodes/: brain  shelf_name_visualizer
rosinstall/: catkin.rosinstall
scripts/: cartesian_exp.py  log_analyzer.py  marko.py  post_process_augsburg.py  post_process_backroom.py  post_process_bremen.py  post_process_karlsruhe.py  refill.py  stefan.py  tab262_rooming_in.py
src/refills_second_review/: configure_layer_detection_behavior.py  facing_detection_behavior.py  finish_perception_behavior.py  gripper.py  layer_detection_behavior.py  product_counting_behavior.py
(+12 files in other folders)
