<?xml version="1.0"?>
<package format="2">
  <name>refills_second_review</name>
  <version>0.0.1</version>
  <description>
    Configuration and launch-files for the use case scenarios of the second REFILLS review. 
  </description>

  <maintainer email="georg.bartels@cs.uni-bremen.de">Georg Bartels</maintainer>
  <author email="georg.bartels@cs.uni-bremen.de">Georg Bartels</author>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>iai_donbot_bringup</exec_depend>
  <exec_depend>iai_donbot_description</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>py_trees_ros</exec_depend>
  <exec_depend>iai_rosout_diagnostics</exec_depend>
  <exec_depend>refills_perception_interface</exec_depend>

</package>
